--- a/connections-service/src/main/resources/application.properties
+++ b/connections-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/erd_connections?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=create
+
+spring.application.name=connections-service
+server.port=8191
