--- a/connections-service/src/main/resources/application.properties
+++ b/connections-service/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.application.name=connections-service
 server.port=8191
+
+#server.port=${PORT:0}
+#eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
