--- a/connections-service/src/main/resources/application.properties
+++ b/connections-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/erd_connections?serverTimezone
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.org.hibernate.SQL=debug
 
 spring.jpa.hibernate.ddl-auto=none
 
