Commons bien implementado

--- a/connections-service/pom.xml
+++ b/connections-service/pom.xml
@@ -21,8 +21,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.connections.service.app.commons</groupId>
-			<artifactId>connections-service-commons</artifactId>
+			<groupId>app.commons</groupId>
+			<artifactId>commons-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
