--- a/connections-service/src/main/resources/application.properties
+++ b/connections-service/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type=TRACE
 
 spring.jpa.hibernate.ddl-auto=none
 
